--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400&subset=latin-ext')
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,500i,600&subset=latin-ext')
 /* Sass Reset */
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -49,12 +48,219 @@ table
 	border-collapse: collapse
 	border-spacing: 0
 /* Global styles */
+*
+	box-sizing: border-box
 body
 	font-size: 10px
 	font-family: 'Montserrat', sans-serif
 .container
 	max-width: 1200px
 	margin: 0 auto
-	display: grid
-	grid-template-columns: 
+*
+	border: 1px solid red
 /* HEADER */
+header
+	background: linear-gradient(to left, #5bd0ea , #005b96)
+	color: #fff
+	position: fixed
+	width: 100%
+	box-shadow: 2px 2px 5px #000
+	.container
+		display: grid
+		grid-template-columns: 100px 1fr
+		height: 50px
+.name
+	align-self: center
+	padding-left: 20px
+	h3
+		font-size: 1.2rem
+.navigation
+	justify-self: end
+	align-self: center
+	padding-right: 20px
+	li
+		display: inline-block
+	a
+		font-size: 1.2rem
+		font-weight: 500
+		padding: 0 10px
+		text-decoration: none
+		color: #fff
+		transition: .3s ease-in-out
+		&:hover
+			color: #26292b
+
+/* HERO */
+.hero
+	padding-top: 50px
+	height: calc(70vh - 50px)
+	text-align: center
+	background-image: url(../images/main-background.jpeg)
+	background-position: center
+	background-size: cover
+	background-repeat: no-repeat
+	background-attachment: fixed
+	color: #fff
+	text-shadow: 2px 2px 5px #000
+	display: grid
+	img
+		border-radius: 50%
+		box-shadow: 1px 3px 5px #000
+		position: absolute
+		margin: auto
+		top: 489.297px
+		left: 0
+		right: 0
+	.layer
+		display: grid
+		grid-template-columns: 1fr
+		justify-items: center
+		background-color: rgba(0, 91, 150, 0.4)
+.box
+	align-self: center
+	h1
+		font-size: 4rem
+		padding: 25px
+	h3
+		font-size: 2rem
+/* ABOUT ME */
+.about-me
+	background: linear-gradient(to left, #5bd0ea , #005b96)
+	padding: 130px 0 100px 0
+	color: #f4f4f4
+	text-align: center
+	h1
+		font-size: 2.5rem
+		margin: 50px
+		font-weight: 500
+		text-shadow: 1px 1px 2px #000
+	p
+		font-size: 1.3rem
+		line-height: 28px
+		letter-spacing: 0.3px
+		padding: 0 30px 0 30px
+/* SKILLS */
+.skills
+	display: grid
+	grid-template-rows: 300px 1fr 300pxfr
+	// background-color: #e6eaed
+.text
+	grid-row: 1/2
+	text-align: center
+	padding: 0
+	margin: 0
+	align-self: center
+	h1
+		font-size: 2.8rem
+		font-weight: 500
+		font-style: italic
+		padding: 30px
+		margin: 25px
+		color: #26292b
+	p
+		font-size: 1.4rem
+		font-weight: 500
+		color: #26292b
+.known
+	display: grid
+	grid-template-rows: 1fr 1fr
+	grid-template-columns: repeat(5, 1fr)
+	margin: 70px auto
+	grid-gap: 30px
+	justify-items: center
+	align-items: end
+	width: 75%
+	h4
+		font-size: 1.1rem
+		font-style: italic
+		padding-top: 20px
+		text-align: center
+		font-weight: 500
+		color: #26292b
+.ajax
+	grid-column: 2/3
+.api
+	grid-column: 4/5
+.to-learn
+	text-align: center
+	display: grid
+	grid-template-rows: 1fr 1fr
+	grid-template-columns: 1fr 1fr 1fr
+	width: 45%
+	margin: 0 auto
+	p
+		font-size: 1.4rem
+		font-weight: 500
+		grid-column: 1/4
+		color: #26292b
+	h4
+		font-size: 1.1rem
+		font-style: italic
+		padding-top: 20px
+		text-align: center
+		font-weight: 500
+		color: #26292b
+.projects
+	background: linear-gradient(to left, #5bd0ea , #005b96)
+	margin: 100px 0
+	padding: 100px 0
+	.container
+		display: grid
+		grid-template-columns: repeat(3, 1fr)
+		grid-gap: 30px
+.projects-text
+	grid-column: 1/4
+	h1
+		font-size: 2.8rem
+		font-weight: 500
+		font-style: italic
+		text-align: center
+		margin: 50px 0
+	p
+		font-size: 1.4rem
+		text-align: center
+.each-item
+	height: 250px
+	box-shadow: 5px 5px 5px #fff
+	background-position: center
+	background-size: cover
+	position: relative
+	// overflow: hidden
+	display: flex
+	justify-content: center
+	align-items: center
+	cursor: pointer
+	.layer
+		background-color: rgb(229, 98, 98)
+		height: 250px
+		width: 100%
+		position: absolute
+		top: 250px
+		transition: .3s ease-in-out
+		opacity: 0.8
+		&:hover
+			top: 0
+	i
+		color: #fff
+		// opacity: 0
+		transition: .3s ease-in-out
+		transition-delay: .2s
+		cursor: pointer
+		padding: 25px
+	.each-item:hover i 
+		opacity: 0.8
+	.each-item:hover .layer
+		opacity: 0.8
+		top: 0
+.img1
+	background-image: url('../images/projects img/news1.png')
+.img2
+	background-image: url('../images/projects img/news2.png')
+.img3
+	background-image: url('../images/projects img/news3.png')
+.img4
+	background-image: url('../images/projects img/news4.png')
+.img5
+	background-image: url('../images/projects img/news5.png')
+.img6
+	background-image: url('../images/projects img/news6.png')
