--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,500i,600&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web:400,400i,600i&subset=latin-ext");
 /* Sass Reset */
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -52,7 +53,7 @@ table {
 
 body {
   font-size: 10px;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Titillium Web', sans-serif; }
 
 .container {
   max-width: 1200px;
@@ -67,7 +68,8 @@ header {
   color: #fff;
   position: fixed;
   width: 100%;
-  box-shadow: 2px 2px 5px #000; }
+  box-shadow: 2px 2px 5px #000;
+  z-index: 1; }
   header .container {
     display: grid;
     grid-template-columns: 100px 1fr;
@@ -219,6 +221,7 @@ header {
     font-weight: 500;
     color: #26292b; }
 
+/* PROJECTS */
 .projects {
   background: linear-gradient(to left, #5bd0ea, #005b96);
   margin: 100px 0;
@@ -302,4 +305,66 @@ header {
 
 .img6 {
   background-image: url("../images/projects img/news6.png"); }
+
+/* CONTACT */
+.contact {
+  text-align: center; }
+  .contact h1 {
+    font-size: 2.8rem;
+    font-style: italic;
+    font-weight: 500;
+    padding: 40px; }
+  .contact p {
+    font-size: 1.4rem;
+    padding: 30px; }
+  .contact .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+
+.contact-text {
+  grid-column: 1/3; }
+
+.e-mail {
+  grid-column: 1;
+  grid-row: 2;
+  justify-self: right;
+  padding: 30px; }
+  .e-mail h3 {
+    font-size: 1.4rem;
+    font-style: italic;
+    font-weight: 500;
+    color: #fff;
+    padding: 22px;
+    border: 2px solid #3398ea;
+    border-radius: 50px;
+    display: inline-block;
+    background-color: #3398ea;
+    transition: .5s ease-in-out; }
+    .e-mail h3:hover {
+      cursor: pointer;
+      background-color: #fff;
+      color: #3398ea; }
+
+.github {
+  grid-column: 2;
+  grid-row: 2;
+  justify-self: left;
+  padding-left: 100px; }
+  .github i {
+    color: #3398ea;
+    transition: .5s ease-in-out; }
+    .github i:hover {
+      color: #000; }
+
+footer {
+  background-color: #062659;
+  color: #fff;
+  padding: 30px;
+  margin-top: 30px;
+  text-align: center; }
+  footer h3 {
+    font-size: 1rem; }
 /*# sourceMappingURL=style.css.map */
