--- a/css/style.css
+++ b/css/style.css
@@ -76,14 +76,16 @@ header {
     height: 50px; }
 
 .name {
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
   padding-left: 20px; }
   .name h3 {
     font-size: 1.2rem; }
 
 .navigation {
   justify-self: end;
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
   padding-right: 20px; }
   .navigation li {
     display: inline-block; }
@@ -125,7 +127,8 @@ header {
     background-color: rgba(0, 91, 150, 0.4); }
 
 .box {
-  align-self: center; }
+  -ms-flex-item-align: center;
+      align-self: center; }
   .box h1 {
     font-size: 4rem;
     padding: 25px; }
@@ -159,7 +162,8 @@ header {
   text-align: center;
   padding: 0;
   margin: 0;
-  align-self: center; }
+  -ms-flex-item-align: center;
+      align-self: center; }
   .text h1 {
     font-size: 2.8rem;
     font-weight: 500;
@@ -179,7 +183,9 @@ header {
   margin: 70px auto;
   grid-gap: 30px;
   justify-items: center;
-  align-items: end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
   width: 75%; }
   .known h4 {
     font-size: 1.1rem;
@@ -243,9 +249,15 @@ header {
   background-size: cover;
   position: relative;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: pointer; }
   .each-item .layer {
     background-color: #e56262;
@@ -266,7 +278,8 @@ header {
     margin: 25px; }
     .each-item i:hover {
       color: #000;
-      transform: scale(1.3); }
+      -webkit-transform: scale(1.3);
+              transform: scale(1.3); }
 
 .each-item:hover i {
   opacity: 0.8; }
@@ -307,7 +320,9 @@ header {
   .contact .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    align-items: center; }
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
 
 .contact-text {
   grid-column: 1/3; }
@@ -352,5 +367,4 @@ footer {
   text-align: center; }
   footer h3 {
     font-size: 1rem; }
-
 /*# sourceMappingURL=style.css.map */
