Background projects added to projects section, links for live and github versions added to html

--- a/css/style.css
+++ b/css/style.css
@@ -289,10 +289,10 @@ header {
   top: 0; }
 
 .img1 {
-  background-image: url("../images/projects img/news1.png"); }
+  background-image: url("../images/projects img/tablica_kanban.jpg"); }
 
 .img2 {
-  background-image: url("../images/projects img/news2.png"); }
+  background-image: url("../images/projects img/mache.jpg"); }
 
 .img3 {
   background-image: url("../images/projects img/news3.png"); }
