--- a/sass/style.sass
+++ b/sass/style.sass
@@ -260,9 +260,9 @@ header
 	opacity: 0.8
 	top: 0
 .img1
-	background-image: url('../images/projects img/news1.png')
+	background-image: url('../images/projects img/tablica_kanban.jpg')
 .img2
-	background-image: url('../images/projects img/news2.png')
+	background-image: url('../images/projects img/mache.jpg')
 .img3
 	background-image: url('../images/projects img/news3.png')
 .img4
